--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,9 +25,8 @@
                     android:id="@+id/logout"
                     android:padding="5dp"
                     android:layout_alignParentStart="true"
-                    android:background="@drawable/ic_logoutt"
+                    android:background="@drawable/ic_arrow"
                     android:layout_width="35dp"
-                    android:rotation="180"
                     android:layout_height="35dp"
                     android:layout_alignParentLeft="true" />
 
