--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
 
     <color name="lightWhite">#f2f5f8</color>
 
+    <color name="color_one">#192A56</color>
+    <color name="color_two">#0A3D62</color>
+
 </resources>
