Magasin-Cms-App

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -155,6 +155,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/addNewTask"
             android:text="Add task"
+            android:onClick="SendData"
             android:background="@drawable/btn_background"
             android:textColor="@color/colorPrimary"
             android:layout_marginTop="40dp" />
