--- a/app/src/main/res/drawable/grad_bg.xml
+++ b/app/src/main/res/drawable/grad_bg.xml
@@ -3,8 +3,8 @@
 
     <gradient
         android:angle="0"
-        android:endColor="@color/gradStop"
-        android:startColor="@color/gradStart"
+        android:endColor="#7DDDF4"
+        android:startColor="#5FACFF"
         android:type="linear" />
 
 </shape>
