--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -34,8 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/transparent"
-            app:cardCornerRadius="40sp"
-            app:cardMaxElevation="20sp"
+            app:cardCornerRadius="40dp"
             app:cardElevation="5dp"
             android:onClick="ClickTemperature">
 
