--- a/app/src/main/res/layout/activity_task_management.xml
+++ b/app/src/main/res/layout/activity_task_management.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:paddingRight="20dp"
     android:orientation="vertical"
-    android:background="@color/white"
     android:paddingLeft="20dp"
     tools:context=".TaskManagementActivity">
 
@@ -61,10 +60,11 @@
             android:layout_weight="1">
 
             <ImageView
+                android:id="@+id/noDataImage"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                android:id="@+id/noDataImage"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:visibility="invisible" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
