Magasin-Cms-App

--- a/app/src/main/res/drawable/round_back_while_stroke_1000.xml
+++ b/app/src/main/res/drawable/round_back_while_stroke_1000.xml
@@ -3,6 +3,6 @@
 
     <solid android:color="@color/transparent"/>
     <stroke android:width="2dp"
-        android:color="#80FFFFFF"/>
+        android:color="#FFFFFF"/>
     <corners android:radius="1000dp"/>
 </shape>
