--- a/app/src/main/res/layout/activity_task_management.xml
+++ b/app/src/main/res/layout/activity_task_management.xml
@@ -19,13 +19,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hello"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/colorPrimary"
-                android:textSize="18sp"/>
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -68,6 +62,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_height="match_parent"
                 android:id="@+id/taskRecycler"/>
 
