--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -8,7 +8,8 @@
     app:cardBackgroundColor="@color/transparent"
     app:cardCornerRadius="20dp"
     app:contentPadding="4dp"
-    android:layout_height="150dp">
+    android:id="@+id/Task_Card"
+    android:layout_height="200dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_weight="1"
             android:layout_marginRight="5dp"
             android:layout_marginTop="10dp"
@@ -31,25 +32,18 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:alpha="0.5"
-                android:text="Tue"
+
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/date"
-                android:text="18"
-                android:layout_gravity="center"
-                android:textSize="24sp"
-                android:textColor="@color/colorAccent" />
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/month"
                 android:layout_gravity="center"
-                android:text="Nov"
+
                 android:textSize="18sp"
                 android:textColor="@color/lightWhite"
                 android:alpha="0.5"/>
@@ -79,7 +73,7 @@
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="TASK"
+
                     android:textSize="20sp"
                     android:layout_weight="1"
                     android:textColor="@color/colorAccent"/>
@@ -98,15 +92,15 @@
             <TextView
                 android:id="@+id/details"
                 android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="Details"
+                android:layout_height="wrap_content"
+
                 android:textColor="@color/lightWhite"
                 android:textSize="15sp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                tools:text=""
+
                 android:id="@+id/time"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"/>
@@ -117,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
-                android:text="COMPLETED"
+
                 android:textSize="12sp"
                 android:id="@+id/status"
                 android:layout_gravity="right"
@@ -133,18 +127,11 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-            <Button
+            <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Edit"
-                android:background="@drawable/round_back_while_stroke_1000" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Delete"
-                android:background="@drawable/round_back_while_stroke_1000" />
-
+                android:id="@+id/date"/>
             </LinearLayout>
 
         </LinearLayout>
