--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="12dp"
-   android:gravity="center_vertical">
+   android:gravity="center_vertical"
+    android:onClick="ClickMenu">
 
     <ImageView
         android:layout_width="wrap_content"
