--- a/app/src/main/res/layout/activity_all_received_tasks.xml
+++ b/app/src/main/res/layout/activity_all_received_tasks.xml
@@ -7,7 +7,7 @@
     android:paddingRight="20dp"
     android:orientation="vertical"
     android:paddingLeft="20dp"
-    tools:context=".TaskManagementActivity">
+    tools:context=".AllReceivedTasksActivity">
 
 
     <FrameLayout
@@ -24,7 +24,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Received Tasks"
+                android:text="All Tasks"
                 fontPath="fonts/nunito_extra_bold.ttf"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimary"
@@ -48,12 +48,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <ImageView
-                android:id="@+id/noDataImage"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_gravity="center"
-                android:visibility="invisible" />
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
