--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -14,10 +14,26 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <include
-            layout="@layout/main_toolbar"></include>
+            <include
+                layout="@layout/main_toolbar"
+                ></include>
 
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="5dp"
+                android:padding="1dp"
+                android:id="@+id/OpenNotif"
+                android:onClick="OpenNotif"
+                android:src="@drawable/ic_baseline_notifications_active_24" />
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
