--- a/app/src/main/res/layout/single_row_design.xml
+++ b/app/src/main/res/layout/single_row_design.xml
@@ -22,7 +22,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/Fname_text"
-            android:text="This is Demo Name"
             android:textStyle="bold"
             android:textSize="25sp"
             android:textColor="#000"
@@ -33,7 +32,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/Department_text"
-            android:text="This is Demo Department"
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="#000"
@@ -45,7 +43,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/Email_text"
-            android:text="This is Demo Email"
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="#000"
@@ -53,6 +50,23 @@
             android:layout_below="@id/Fname_text"
             android:layout_marginLeft="10dp"/>
 
+        <ImageView
+            android:id="@+id/SendEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_email_24"
+            android:layout_alignParentRight="true"
+            android:padding="10dp"></ImageView>
+        <ImageView
+            android:id="@+id/CallUser"
+            android:layout_width="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_baseline_call_24"
+            android:layout_below="@+id/SendEmail"
+            android:padding="10dp">
+
+        </ImageView>
 
     </RelativeLayout>
 
