--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:text="Fill the details below to add a task into your TODO"
+            android:text="Fill the details below to add a task"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             android:alpha="0.8"
@@ -176,7 +176,7 @@
             android:text="Add task"
             android:layout_weight="1"
             android:background="@drawable/btn_background"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#FBF2B6"
             android:layout_marginTop="40dp" />
 
         <Button
@@ -187,7 +187,7 @@
             android:text="Back"
             android:onClick="SendData"
             android:background="@drawable/btn_background"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#FBF2B6"
             android:layout_marginTop="40dp" />
 
         </LinearLayout>
