--- a/app/src/main/res/layout/activity_received_management.xml
+++ b/app/src/main/res/layout/activity_received_management.xml
@@ -7,6 +7,7 @@
     android:paddingRight="20dp"
     android:orientation="vertical"
     android:paddingLeft="20dp"
+    android:background="@drawable/grad_bg"
     tools:context=".ReceivedTasks">
 
 
@@ -27,7 +28,7 @@
                 android:text="My Tasks"
                 fontPath="fonts/nunito_extra_bold.ttf"
                 android:textStyle="bold"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#302C21"
                 android:textSize="23sp"
                 tools:ignore="MissingPrefix" />
 
@@ -41,8 +42,8 @@
                 android:paddingRight="30dp"
                 android:text="All tasks"
                 android:textAllCaps="false"
-                android:backgroundTint="@color/colorPrimaryDark"
-                android:textColor="@color/white"
+                android:backgroundTint="#302C21"
+                android:textColor="#FBF2B6"
                 android:textSize="13sp" />
 
         </LinearLayout>
