--- a/app/src/main/res/layout/activity_sent_tasks.xml
+++ b/app/src/main/res/layout/activity_sent_tasks.xml
@@ -7,7 +7,8 @@
     android:paddingRight="20dp"
     android:orientation="vertical"
     android:paddingLeft="20dp"
-    tools:context=".SentTasks">
+    tools:context=".SentTasks"
+    android:background="@drawable/grad_bg">
 
 
     <FrameLayout
@@ -27,7 +28,7 @@
                 android:text="Sent Tasks"
                 fontPath="fonts/nunito_extra_bold.ttf"
                 android:textStyle="bold"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#302C21"
                 android:textSize="28sp"
                 tools:ignore="MissingPrefix" />
 
