--- a/app/src/main/res/layout/activity_temperature.xml
+++ b/app/src/main/res/layout/activity_temperature.xml
@@ -1,22 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TemperatureActivity">
+    tools:context=".TemperatureActivity"
+    android:orientation="vertical"
+    android:background="@drawable/grad_bg">
 
+  <Button
+      android:id="@+id/back_btn"
+      android:padding="5dp"
+      android:layout_alignParentStart="true"
+      android:background="@drawable/ic_arrow"
+      android:layout_width="35dp"
+      android:layout_height="35dp"
+      android:layout_alignParentLeft="true" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+  android:orientation="horizontal">
+  <TextView
+      android:layout_marginTop="90dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="24sp"
+      android:textStyle="bold"
+      android:text="Temperature : "
+      />
+  <TextView
+      android:textStyle="bold"
+      android:id="@+id/CurrentTemp"
+      android:layout_marginTop="90dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+    android:textSize="22sp"/>
+</LinearLayout>
 
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal">
     <TextView
+        android:layout_marginTop="90dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Temperature Activity"
-        android:layout_centerInParent="true"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        tools:ignore="MissingConstraints">
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:text="Humidity : "
+        />
+    <TextView
+        android:textStyle="bold"
+        android:id="@+id/CurrentHum"
+        android:layout_marginTop="90dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="22sp"/>
+  </LinearLayout>
 
-    </TextView>
 
-
-</RelativeLayout>
+</LinearLayout>
