--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -6,7 +6,7 @@
     app:cardUseCompatPadding="true"
     app:cardElevation="5dp"
     app:cardBackgroundColor="@color/transparent"
-    app:cardCornerRadius="20dp"
+    app:cardCornerRadius="40sp"
     app:contentPadding="4dp"
     android:id="@+id/Task_Card"
     android:layout_height="200dp">
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:background="@drawable/grad_bg">
+        android:background="@drawable/card_views_colors">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -52,7 +52,7 @@
             android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:alpha="0.5"
-            android:background="@android:color/black"/>
+            android:background="#FBF2B6"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,6 +71,7 @@
                     android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:textStyle="bold"
                     android:textSize="20sp"
                     android:layout_weight="1"
                     android:textColor="@color/white"/>
@@ -91,7 +92,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-
                 android:id="@+id/time"
                 android:textSize="12sp"
                 android:textColor="@color/lightWhite"/>
@@ -121,7 +121,7 @@
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/date"/>
+                android:id="@+id/ReceiverCs"/>
             </LinearLayout>
 
         </LinearLayout>
