--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -35,11 +35,10 @@
             android:textAllCaps="true"
             android:textSize="30sp"
             android:layout_marginTop="15dp"
-            android:layout_marginBottom="5dp"
             android:textStyle="bold" />
 
         <androidx.cardview.widget.CardView
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="#302C21"
@@ -54,17 +53,21 @@
                 android:layout_margin="20dp"
                 android:background="@drawable/card_views_colors">
 
-
+                <ImageView
+                    android:layout_width="85dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/thermometer" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="100dp"
                     android:padding="25dp"
                     android:layout_marginRight="50dp"
                     android:text="Temperature and Humidity"
                     android:textColor="#FBF2B6"
-                    android:textSize="24sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
 
@@ -74,7 +77,7 @@
 
 
         <androidx.cardview.widget.CardView
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="#302C21"
@@ -91,7 +94,7 @@
                 android:background="#302C21">
 
                 <ImageView
-                    android:layout_width="100dp"
+                    android:layout_width="85dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/task_clipboard" />
@@ -99,11 +102,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="100dp"
                     android:padding="25dp"
                     android:text="Task Management"
                     android:textColor="#FBF2B6"
-                    android:textSize="24sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
 
@@ -112,7 +115,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="#302C21"
@@ -128,7 +131,7 @@
                 android:background="@drawable/card_views_colors">
 
                 <ImageView
-                    android:layout_width="100dp"
+                    android:layout_width="85dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="20dp"
                     android:src="@drawable/todo" />
@@ -136,12 +139,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="100dp"
                     android:padding="25dp"
                     android:layout_marginRight="50dp"
                     android:text="To-Do-List"
                     android:textColor="#FBF2B6"
-                    android:textSize="24sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
 
