--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -5,28 +5,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChatActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/grad_bg">
 
     <ListView
         android:id="@+id/ChatId"
         android:layout_width="wrap_content"
         android:layout_height="550dp"
+        android:layout_weight="1"
         />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
+
         <EditText
             android:id="@+id/MessageBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Type a message"/>
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/et_bg"
+            android:fontFamily="sans-serif-light"
+            android:paddingLeft="15dp"
+            android:hint="Message..."
+            android:paddingRight="15dp"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:layout_weight="1"/>
         <Button
+            android:layout_marginTop="5dp"
+            android:background="@drawable/btn_bg"
             android:id="@+id/SendMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Send"/>
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:text="Send"
+            android:backgroundTint="#0A3D62"
+            android:textColor="#FBF2B6"
+            android:layout_weight="1"
+            />
 
 
 
