--- a/app/src/main/res/layout/fragment_recfragment.xml
+++ b/app/src/main/res/layout/fragment_recfragment.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".recfragment">
+    tools:context=".recfragment"
+    android:background="@drawable/grad_bg">
 
     <!-- TODO: Update blank fragment layout -->
 
