--- a/app/src/main/res/layout/to_do_task_layout.xml
+++ b/app/src/main/res/layout/to_do_task_layout.xml
@@ -6,18 +6,21 @@
     app:cardCornerRadius="8dp"
     app:cardElevation="5dp"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginVertical="8dp">
+    android:layout_marginVertical="8dp"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:background="@drawable/card_views_colors">
 
         <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/mcheckbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/color_two"
+            android:buttonTint="#FBF2B6"
+            android:textColor="#FBF2B6"
             android:text="This is Task 1"
             android:paddingStart="8dp"/>
     </RelativeLayout>
