--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -28,7 +28,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:text="Add a task"
-            android:textColor="@android:color/black"
+            android:textColor="#004E9A"
             android:textSize="22sp"
             tools:ignore="MissingPrefix" />
 
