--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="Dashboard"
-            android:textColor="#302C21"
+            android:textColor="@color/white"
             android:textAllCaps="true"
             android:textSize="30sp"
             android:layout_marginTop="15dp"
@@ -41,7 +41,7 @@
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="#302C21"
+            app:cardBackgroundColor="#428CDA"
             app:cardCornerRadius="40sp"
             app:cardMaxElevation="20sp"
             app:cardElevation="5dp"
@@ -66,7 +66,7 @@
                     android:padding="25dp"
                     android:layout_marginRight="50dp"
                     android:text="Temperature and Humidity"
-                    android:textColor="#FBF2B6"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -80,7 +80,7 @@
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="#302C21"
+            app:cardBackgroundColor="#428CDA"
             android:background="@drawable/card_views_colors"
             app:cardCornerRadius="40sp"
             app:cardMaxElevation="20sp"
@@ -91,7 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:layout_margin="20dp"
-                android:background="#302C21">
+                android:background="@drawable/card_views_colors">
 
                 <ImageView
                     android:layout_width="85dp"
@@ -105,7 +105,7 @@
                     android:layout_marginLeft="100dp"
                     android:padding="25dp"
                     android:text="Task Management"
-                    android:textColor="#FBF2B6"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -118,7 +118,7 @@
             android:layout_marginTop="15dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="#302C21"
+            app:cardBackgroundColor="#428CDA"
             app:cardCornerRadius="40sp"
             app:cardMaxElevation="20sp"
             app:cardElevation="5dp"
@@ -143,7 +143,7 @@
                     android:padding="25dp"
                     android:layout_marginRight="50dp"
                     android:text="To-Do-List"
-                    android:textColor="#FBF2B6"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
