--- a/app/src/main/res/layout/activity_received_management.xml
+++ b/app/src/main/res/layout/activity_received_management.xml
@@ -28,7 +28,7 @@
                 android:text="My Tasks"
                 fontPath="fonts/nunito_extra_bold.ttf"
                 android:textStyle="bold"
-                android:textColor="#302C21"
+                android:textColor="@color/white"
                 android:textSize="23sp"
                 tools:ignore="MissingPrefix" />
 
@@ -42,7 +42,7 @@
                 android:paddingRight="30dp"
                 android:text="All tasks"
                 android:textAllCaps="false"
-                android:backgroundTint="#302C21"
+                android:background="@drawable/btn_background"
                 android:textColor="#FBF2B6"
                 android:textSize="13sp" />
 
@@ -71,20 +71,7 @@
 
         </FrameLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:text="Add Task"
-            android:drawablePadding="10dp"
-            android:paddingTop="10dp"
-            android:id="@+id/addTask"
-            android:layout_gravity="center"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:drawableLeft="@drawable/ic_add_black_24dp"
-            android:textAlignment="center"
-            android:layout_weight="0.5"
-            android:layout_marginBottom="20dp"/>
+
 
     </LinearLayout>
 
