--- a/app/src/main/res/layout/activity_sent_tasks.xml
+++ b/app/src/main/res/layout/activity_sent_tasks.xml
@@ -67,7 +67,7 @@
             android:paddingTop="10dp"
             android:id="@+id/addTask"
             android:layout_gravity="center"
-            android:textColor="@color/colorPrimary"
+            android:textColor="#302C21"
             android:textSize="20sp"
             android:drawableLeft="@drawable/ic_add_black_24dp"
             android:textAlignment="center"
