--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/grad_bg"
     tools:context="com.example.magasin_cms.SignUp">
 
-    <RelativeLayout
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -90,7 +90,7 @@
                         android:background="@drawable/et_bg"
                         android:fontFamily="sans-serif-light"
                         android:paddingLeft="15dp"
-                        android:hint="xxxx@visteon.com"
+                        android:hint="csID@visteon.com"
                         android:paddingRight="15dp"
                         android:textColor="@color/white"
                         android:textSize="15sp" />
@@ -316,7 +316,7 @@
 
         </RelativeLayout>
 
-    </RelativeLayout>
+    </ScrollView>
 
 
 
