--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     >
     <include
-        layout="@layout/header"/>
+        layout="@layout/header" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -80,12 +80,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_calendar"
+            android:src="@drawable/ic_baseline_chat_24"
             android:layout_marginEnd="10dp"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Calendar"
+            android:text="Live Chat"
             android:layout_weight="1"
             android:padding="12dp"
             android:layout_marginStart="16dp"/>
